# mindlab

./: .copier-answers.yml  .gitignore  MANIFEST.in  README.md  README.rst  conftest.py  notebook_test.ipynb  pyproject.toml
.github/workflows/: publish-release.yml  test-pull-request.yml
cloud/: .terraform.lock.hcl  config.hcl  main.tf  outputs.tf  terragrunt.hcl  variables.tf
docs/: auth.rst  conf.py  index.rst  magics.rst  plotting.rst  spark.rst
mindlab/: __init__.py  auth.py  lab.py  magics.py  mock_data.py  plot.py  pyproject.py  spark.py  utils.py
mindlab/config/: ipython_kernel_config.py  jupyterlab_settings_overrides.json
mindlab/config/@jupyter-widgets/jupyterlab-manager/: plugin.jupyterlab-settings
mindlab/config/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
mindlab/config/@jupyterlab/console-extension/: tracker.jupyterlab-settings
mindlab/config/@jupyterlab/extensionmanager-extension/: plugin.jupyterlab-settings
mindlab/config/@jupyterlab/fileeditor-extension/: plugin.jupyterlab-settings
mindlab/config/@jupyterlab/notebook-extension/: tracker.jupyterlab-settings
mindlab/config/@jupyterlab/shortcuts-extension/: shortcuts.jupyterlab-settings
mindlab/config/@krassowski/jupyterlab-lsp/: completion.jupyterlab-settings  highlights.jupyterlab-settings  jump_to.jupyterlab-settings  plugin.jupyterlab-settings
mindlab/config/matplotlib/styles/: logikal-docs.mplstyle  logikal-light.mplstyle  logikal.mplstyle
mindlab/styles/: logikal_dark.mplstyle  logikal_slides.mplstyle  mindlab.mplstyle  mindlab_dark.mplstyle  mindlab_light.mplstyle
requirements/: core.txt  dev.txt  docs.txt  jupyter.txt
requirements/extras/: jupyter.txt
tests/mindlab/: conftest.py  test_auth.py  test_lab.py  test_magics.py  test_plot.py  test_spark.py  test_utils.py
tests/mindlab/data/: order_line_items.csv
